# fitlog

./: .gitignore  .pre-commit-config.yaml  AUTHENTICATION.md  PRE-COMMIT-SETUP.md  README.md  REQUIREMENTS.md  V2-DEVELOPMENT.md  WORKFLOW-DESIGN.md  get_smashrun_token.py  pyproject.toml  run_e2e_tests.sh  test-results.xml  test_black_demo.py  test_linting.py
.github/: DEPLOYMENT-SETUP.md
.github/workflows/: deploy.yml  infrastructure.yml
api/: db_cloud.py  main.py  main_test.py  typing_extensions.py
api/annotated_types/: __init__.py  test_cases.py
api/anyio/: from_thread.py  pytest_plugin.py  to_interpreter.py  to_process.py  to_thread.py
api/anyio/_backends/: _asyncio.py  _trio.py
api/anyio/_core/: _eventloop.py  _sockets.py  _subprocesses.py
api/anyio/abc/: _eventloop.py  _tasks.py
api/anyio/streams/: tls.py
api/fastapi/: _compat.py  applications.py  background.py  concurrency.py  datastructures.py  encoders.py  exceptions.py  param_functions.py  params.py  routing.py  types.py  utils.py
api/fastapi-0.115.12.dist-info/: RECORD
api/fastapi/dependencies/: models.py  utils.py
api/fastapi/openapi/: docs.py  models.py  utils.py
api/fastapi/security/: api_key.py  http.py  oauth2.py  open_id_connect_url.py
api/idna/: core.py
api/mangum/: adapter.py  types.py
api/mangum/handlers/: alb.py
api/pydantic/: _migration.py  aliases.py  color.py  config.py  dataclasses.py  errors.py  fields.py  functional_serializers.py  functional_validators.py  json_schema.py  main.py  mypy.py  networks.py  root_model.py  type_adapter.py  types.py  validate_call_decorator.py
api/pydantic/_internal/: _config.py  _core_utils.py  _dataclasses.py  _decorators.py  _decorators_v1.py  _discriminated_union.py  _fields.py  _generate_schema.py  _generics.py  _mock_val_ser.py  _model_construction.py  _namespace_utils.py  _schema_gather.py  _schema_generation_shared.py  _signature.py  _typing_extra.py  _utils.py  _validate_call.py  _validators.py
api/pydantic/deprecated/: class_validators.py  config.py  decorator.py  json.py  parse.py  tools.py
api/pydantic/experimental/: pipeline.py
api/pydantic/plugin/: __init__.py  _schema_validator.py
api/pydantic/v1/: _hypothesis_plugin.py  annotated_types.py  class_validators.py  color.py  config.py  dataclasses.py  datetime_parse.py  decorator.py  env_settings.py  error_wrappers.py  errors.py  fields.py  generics.py  json.py  main.py  mypy.py  networks.py  parse.py  schema.py  tools.py  types.py  typing.py  utils.py  validators.py
api/pydantic_core/: __init__.py  _pydantic_core.pyi  core_schema.py
api/routers/: __init__.py  activities.py  pushups.py  runs.py
api/sniffio/_tests/: test_sniffio.py
api/starlette/: _exception_handler.py  _utils.py  applications.py  authentication.py  background.py  concurrency.py  datastructures.py  endpoints.py  formparsers.py  requests.py  responses.py  routing.py  staticfiles.py  templating.py  testclient.py  websockets.py
api/starlette/middleware/: __init__.py  base.py  cors.py  exceptions.py  gzip.py  wsgi.py
api/typing_extensions-4.14.0.dist-info/: METADATA
api/typing_inspection/: introspection.py  typing_objects.py  typing_objects.pyi
fitlog/: .env.example  __init__.py  cli.py  cloud.py  config.py  db.py  models.py  renderer.py  smashrun.py
infrastructure/: AWS-PROFILES.md  BOOTSTRAP.md  MULTI-ACCOUNT-SUMMARY.md  bootstrap.sh  deploy.sh  main.py  main.tf  terraform.tfvars.example
infrastructure/bootstrap/: main.tf
infrastructure/modules/api-gateway/: main.tf  outputs.tf  variables.tf
infrastructure/modules/iam/: main.tf  outputs.tf  variables.tf
infrastructure/modules/lambda/: main.tf  main.tf.backup  outputs.tf  variables.tf
infrastructure/modules/s3/: main.tf  outputs.tf  variables.tf
tests/: test_models.py  test_smashrun.py
tests/e2e/: README.md  pytest.ini  run_e2e_tests.py  test_api_endpoints.py
